添加注释,代码review,优化性能和逻辑 未加载区块的物品会从缓存中移除